feat: new project reference

--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,86 @@
-DATABASE_DSN=[Database string (DSN) connection on user/password/name slots format. Default: "%s:%s@tcp(localhost:3306)/%s?charset=utf8&parseTime=True&loc=Local"]
-DATABASE_NAME=[Database name. Default: "lrw"]
-DATABASE_USER=[Database user name. Default: "lrw"]
-DATABASE_PASSWORD=[Database password. Default: "lrw"]
-DATABASE_ATTEMPT_RECONNECT_TRY=[Attempts to connect on database. Default: "0"]
-DATABASE_DELAY_RECONNECT_TRY=[Delay in seconds between attempts. Default: "5"]
-DATABASE_MAX_CONNECTIONS=[Max connections with database. Default: "2"]
-DATABASE_MAX_IDLE_CONNECTIONS=[Number max of idles connections with database. Default: "2"]
-DATABASE_LOGGER_MODE=[Set logger mode to database queries. Default: "4" (info)]
-DATABASE_MIGRATION=[Make tables and columns on startup service. Default: "true"]
+GORM_DRIVER_TYPE=sqlite,mysql
+GORM_LOGGER_DISCARD=false
+GORM_LOGGER_MODE=4,3,2,1 (debug to silent)
+GORM_SKIP_DEFAULT_TRANSACTION=true
+GORM_MIGRATE=true
 
-DATABASE_ROOT_PASSWORD=[Database ROOT password (only for docker development)]
+CACHE_TYPE=memory,redis
 
-CORS_ALLOW_ORIGINS=[Array JSON string for CORS allow origins header. Default: `[]`]
-CORS_ALLOW_METHODS=[Array JSON string for CORS allow methods header. Default: `["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD"]`]
-CORS_ALLOW_HEADERS=[Array JSON string for CORS allow headers header. Default: `["Origin", "Content-Length", "Content-Type", "X-Request-Width", "Accept", "Authorization"]`]
-CORS_EXPOSE_HEADERS=[Array JSON string for indicate which headers are safe to expose to the API of a CORS. Default: `[]`]
-CORS_MAX_AGE=[Integer number that indicate in hours how long the client must cache requests. Default: "12"]
-CORS_ALLOW_ALL_ORIGINS=[Allow all origins. Default: "true"]
-CORS_ALLOW_CREDENTIALS=[Indicates whether the request can include user credentials like cookies. Default: "true"]
-CORS_ALLOW_WILDCARD=[Allows to add origins like http://some-domain/*, https://api.* or http://some.*.subdomain.com. Default: "false"]
-CORS_ALLOW_BROWSER_EXTENSIONS=[Allows usage of popular browser extensions schemas. Default: "false"]
-CORS_ALLOW_WEBSOCKETS=[Allows usage of WebSocket protocol. Default: "false"]
-CORS_ALLOW_FILES=[Allows usage of file:// schema (dangerous!) use it only when you 100% sure it's needed. Default: "false"]
-GIN_MODE=[Set Gin mode operation. Default: "debug"]
+SQLITE_DATABASE=lrw
 
-AUTH_VERIFY_TOKEN_IP=[Filter request verifying the token IP. Default: "false"]
-AUTH_JWT_KEY_CONFIG=[The private key in base 64 PKCS1 format. If no key is set, the new one will be generated in every restart service. Default: ""]
-AUTH_COOKIE=[Name of key cookie to get jwt token. Default: "lrw"]
-AUTH_CUSTOM_AUTHENTICATION_HEADER=[Name of header to get jwt token. Default: "Authorization"]
-AUTH_TOKEN_TIME=[Time of living jwt token in minutes. Default: "15"]
-AUTH_TOKEN_AUDIENCE=[Name of audience claims in jwt token. Default: "LRW"]
-AUTH_DOMAIN=[Domain field of cookie. Default: "localhost"]
-AUTH_COOKIE_SECURE=[Secure field of cookie. Default: "false"]
-AUTH_COOKIE_HTTP_ONLY=[HTTP only field of cookie. Default: "true"]
-AUTH_BCRYPT_COST=[Cost of bcrypt algorithm to generate passwords hashes. Default: "10"]
+MYSQL_DATABASE=lrw
+MYSQL_USER=lrw
+MYSQL_PASSWORD=lrw
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_URL=%s:%s@tcp(%s:%d)/%s?charset=utf8&parseTime=True&loc=Local
+MYSQL_MAX_IDLE_CONNECTIONS=2
+MYSQL_MAX_OPEN_CONNECTIONS=2
 
-FILTERS_FILTER_EMPTY_ORIGIN=[Filter requests with empty HTTP Origin header. Default: "false"]
+REDIS_URL=%s:%d
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=redis
 
-SERVICE_NAME=[Name of service. Default: "LRW"]
-SERVICE_PATH=[Root route service path. Default: "/api/v1"]
-SERVICE_ADDRESS=[Port to bind service. Default: ":8000"]
-SERVICE_NETWORK=[Network to bind service. Default: "tcp4"]
-SERVICE_EXPOSE_INTERNAL_ERROR=[Show the error on API output message. Default: "false"]
-SERVICE_ORIGINAL_STATUS=[Set HTTP status on response. Default: "true"]
-SERVICE_AUTHENTICATION=[Enable routes and migrations authentications. Default: "true"]
+AUTH_COOKIE=tk
+AUTH_COOKIE_PATH=/api/v1
+AUTH_COOKIE_DOMAIN=localhost
+AUTH_COOKIE_SECURE=false (send only through https)
+AUTH_COOKIE_HTTP_ONLY=true (XSS attacks)
+AUTH_SAME_SITE=4,3,2,1 (3 is default and strict mode. Go: http.SameSite package)
+AUTH_CUSTOM_AUTHENTICATION_HEADER=Authorization
+AUTH_JWT_KEY=password_for_sign_jwt_tokens (128 min length)
+AUTH_AUDIENCE=auth.audience
+AUTH_ISSUER=auth.issuer
+AUTH_EXPIRES=525600 (value on minutes == 1 year)
+
+AUTH_VERIFY_FROM=verify@lripardo.github.com
+AUTH_VERIFY_KEY=password_for_verify_accounts (128 min length)
+AUTH_VERIFY_EXPIRES=30 (minutes)
+AUTH_VERIFY_ROUTE=http://localhost:8080/api/v1/auth/verify
+AUTH_VERIFY_EMAIL_TEMPLATE_NAME=VerifyEmailTemplate
+AUTH_VERIFY_AUDIENCE=auth.verify.audience
+AUTH_VERIFY_ISSUER=auth.verify.issuer
+AUTH_RESET_PASSWORD_KEY=password_for_reset_passwords (128 min length)
+AUTH_RESET_PASSWORD_TEMPLATE_NAME=ResetPasswordTemplate
+AUTH_RESET_PASSWORD_AUDIENCE=auth.reset.password.audience
+AUTH_RESET_PASSWORD_ISSUER=auth.reset.password.issuer
+AUTH_RESET_PASSWORD_EXPIRES=5 (minutes)
+AUTH_RESET_PASSWORD_ROUTE=http://localhost:8080/api/v1/auth/reset-password
+AUTH_RESET_PASSWORD_FROM=reset_password@lripardo.github.com
+
+CORS_ALLOW_ORIGINS=["http://localhost:8080"]
+CORS_ALLOW_METHODS=["GET", "POST", "PUT", "DELETE", "HEAD"]
+CORS_ALLOW_HEADERS=["Origin", "Content-Length", "Content-Type", "X-Request-Width", "Accept", "Authorization"]
+CORS_EXPOSE_HEADERS=[]
+CORS_MAX_AGE=12 (hours)
+CORS_ALLOW_ALL_ORIGINS=true (if set conflicts with allow origins array)
+CORS_ALLOW_CREDENTIALS=true
+CORS_ALLOW_WILDCARD=false
+CORS_ALLOW_BROWSER_EXTENSIONS=false
+CORS_ALLOW_WEBSOCKETS=false
+CORS_ALLOW_FILES=false
+
+GIN_MODE=debug,release,test
+GIN_TRUSTED_PROXIES=["127.0.0.1"]
+GIN_ENABLE_LOG=true
+PORT=8080 (remove gin annoying message port not set)
+
+AUTH_APP_SHOW_USER_EXISTS=true
+AUTH_APP_SHOW_USER_NOTFOUND=true
+AUTH_APP_ALLOW_LOGIN_FROM_NOT_VERIFIED=false
+AUTH_APP_INPUT_VALIDATOR=default,h captcha
+AUTH_APP_PASSWORD_COST=10 (cost rounds bcrypt)
+
+MIDDLEWARES_APP_SERVER_NAME=LRW
+MIDDLEWARES_APP_ALLOW_EMPTY_ORIGIN=true
+MIDDLEWARES_APP_CUSTOM_HEADERS=["Cache-Control: no-cache, no-store, max-age=0, must-revalidate", "X-Content-Type-Options: nosniff", "X-Frame-Options: DENY", "Referrer-Policy: no-referrer"]
+
+AWS_SES_NAME=Luiz Ricardo Ripardo (name on email sender)
+AWS_ACCESS_KEY_ID=key_id
+AWS_SECRET_ACCESS_KEY=key
+AWS_REGION=us-east-1
+
+EMAIL_SENDER_TYPE=console,ses
+
+LOGGER_LEVEL=4,3,2,1,0
