--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,11 @@
 version: "3.7"
 
 services:
-  mysql:
-    image: mariadb:10.1.47
+  api:
+    image: golang:1.17
+    command: go run main.go
+    working_dir: /go/src/github.com/lripardo/lrw
     ports:
-      - 3306:3306
+      - "8080:8080"
     volumes:
-      - database:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
-      MYSQL_USER: ${DATABASE_USER}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_DATABASE: ${DATABASE_NAME}
-
-  phpmyadmin:
-    image: phpmyadmin
-    ports:
-      - 8081:80
-    environment:
-      PMA_HOST: mysql
-      PMA_USER: root
-      PMA_PASSWORD: ${DATABASE_ROOT_PASSWORD}
-      PMA_PMADB: phpmyadmin
-
-volumes:
-  database:
+      - ./:/go/src/github.com/lripardo/lrw
