docs: improve comments on .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 GORM_DRIVER_TYPE=sqlite # Types: sqlite, mysql
 GORM_LOGGER_DISCARD=false # true - output stream is a ioutil.Discard writer
-GORM_LOGGER_MODE=4 # Modes: 4 - info, 3 - warn, 2 - error, 1 - silent
-GORM_SKIP_DEFAULT_TRANSACTION=true # false - execute every SQL on database transaction/begin/commit/rollback
+GORM_LOGGER_MODE=4 # Modes: 4 - info, 3 - warn, 2 - error, 1 - silent (https://gorm.io/docs/logger.html#Log-Levels)
+GORM_SKIP_DEFAULT_TRANSACTION=true # https://gorm.io/docs/transactions.html#Disable-Default-Transaction
 GORM_MIGRATE=true # false - Disable models migration on to database tables
 
 CACHE_TYPE=memory # Types: memory, redis
@@ -13,11 +13,11 @@ MYSQL_USER=lrw
 MYSQL_PASSWORD=lrw
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_URL=%s:%s@tcp(%s:%d)/%s?charset=utf8&parseTime=True&loc=Local
+MYSQL_URL=%s:%s@tcp(%s:%d)/%s?charset=utf8&parseTime=True&loc=Local # put https://pkg.go.dev/fmt#hdr-Printing formats for user, password, host, port, database respectively
 MYSQL_MAX_IDLE_CONNECTIONS=2 # https://github.com/go-sql-driver/mysql#important-settings
 MYSQL_MAX_OPEN_CONNECTIONS=2 # https://github.com/go-sql-driver/mysql#important-settings
 
-REDIS_URL=%s:%d
+REDIS_URL=%s:%d # put https://pkg.go.dev/fmt#hdr-Printing formats for host, port respectively
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redis
@@ -27,7 +27,7 @@ AUTH_COOKIE_PATH=/api/v1
 AUTH_COOKIE_DOMAIN=localhost
 AUTH_COOKIE_SECURE=false # send only through https
 AUTH_COOKIE_HTTP_ONLY=true # XSS attacks
-AUTH_SAME_SITE=3 # Modes: 4 - None, 3 - Strict, 2 - Lax, 1 - Default
+AUTH_SAME_SITE=3 # Modes: 4 - None, 3 - Strict, 2 - Lax, 1 - Default (https://go.dev/src/net/http/cookie.go#L50)
 AUTH_CUSTOM_AUTHENTICATION_HEADER=Authorization # Header name where server is looking for token
 AUTH_JWT_KEY=password_for_sign_jwt_tokens # 128 min length
 AUTH_AUDIENCE=auth.audience # audience name on signed token
@@ -50,13 +50,13 @@ AUTH_RESET_PASSWORD_TEMPLATE_NAME=ResetPasswordTemplate
 AUTH_RESET_PASSWORD_AUDIENCE=auth.reset.password.audience # audience name on signed token
 AUTH_RESET_PASSWORD_ISSUER=auth.reset.password.issuer # issuer name on signed token
 
-# https://github.com/gin-contrib/cors#cors-gins-middleware
+# for all cors configs https://github.com/gin-contrib/cors#cors-gins-middleware
 CORS_ALLOW_ORIGINS=["http://localhost:8080"]
 CORS_ALLOW_METHODS=["GET", "POST", "PUT", "DELETE", "HEAD"]
 CORS_ALLOW_HEADERS=["Origin", "Content-Length", "Content-Type", "X-Request-Width", "Accept", "Authorization"]
 CORS_EXPOSE_HEADERS=[]
 CORS_MAX_AGE=12 # hours
-CORS_ALLOW_ALL_ORIGINS=true # if true, CORS_ALLOW_ORIGINS must be empty
+CORS_ALLOW_ALL_ORIGINS=true # if true, CORS_ALLOW_ORIGINS must be empty, otherwise a error is returned
 CORS_ALLOW_CREDENTIALS=true # allow cookie send
 CORS_ALLOW_WILDCARD=false
 CORS_ALLOW_BROWSER_EXTENSIONS=false
@@ -64,7 +64,7 @@ CORS_ALLOW_WEBSOCKETS=false
 CORS_ALLOW_FILES=false
 
 GIN_MODE=debug # Modes: debug, release, test
-GIN_TRUSTED_PROXIES=["127.0.0.1"] # IPv4 addresses, IPv4 CIDRs, IPv6 addresses or IPv6 CIDRs. Example of production proxies: https://www.cloudflare.com/ips-v4
+GIN_TRUSTED_PROXIES=["127.0.0.1"] # https://pkg.go.dev/github.com/gin-gonic/gin#readme-don-t-trust-all-proxies and https://www.cloudflare.com/ips
 GIN_ENABLE_LOG=true # requests log
 PORT=8080 # remove gin message port is not set
 
