feat: gin http status code always ok configuration

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,7 @@ CORS_ALLOW_FILES=false
 GIN_MODE=debug # Modes: debug, release, test
 GIN_TRUSTED_PROXIES=["127.0.0.1"] # https://pkg.go.dev/github.com/gin-gonic/gin#readme-don-t-trust-all-proxies and https://www.cloudflare.com/ips
 GIN_ENABLE_LOG=true # requests log
+GIN_ALWAYS_OK=true # false - the server responses status code are equals to http responses status code
 PORT=8080 # remove gin message port is not set
 
 AUTH_APP_SHOW_USER_EXISTS=true # security feature
