feat: hcaptcha host verification

--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,7 @@ CORS_ALLOW_FILES=false
 GIN_MODE=debug # Modes: debug, release, test
 GIN_TRUSTED_PROXIES=["127.0.0.1"] # https://pkg.go.dev/github.com/gin-gonic/gin#readme-don-t-trust-all-proxies and https://www.cloudflare.com/ips
 GIN_ENABLE_LOG=true # requests log
-GIN_ALWAYS_OK=true # false - the server responses status code are equals to http responses status code
+GIN_ALWAYS_OK=false # true - server http status code is always 200 OK
 PORT=8080 # remove gin message port is not set
 
 AUTH_APP_SHOW_USER_EXISTS=true # security feature
@@ -94,3 +94,4 @@ AWS_REGION=us-east-1 # https://docs.aws.amazon.com/general/latest/gr/rande.html#
 # H Captcha service
 H_CAPTCHA_SITE_KEY=my_h_captcha_site_key
 H_CAPTCHA_SECRET_KEY=my_h_captcha_secret_key
+H_CAPTCHA_ALLOWED_HOSTS=["dummy-key-pass"] # H Captcha allowed hosts list, remove dummy hosts on production environment
